[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-data-logger"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["sqlalchemy", "paho-mqtt", "pytest", "retry", "icecream"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]                         # ["."] by default
include = ["mqtt_data_logger*"]       # ["*"] by default
exclude = ["mqtt_data_logger.tests*"] # empty by default
namespaces = false                    # true by default

[tool.setuptools.package-data]
tests = ["data/*"]


[project.scripts]
logged = "mqtt_data_logger.log_data:logged"
start_session = "mqtt_data_logger.util:start_session" # paramterize to take arbitrary db fp
initialize_database = "mqtt_data_logger.sensor_data_models:initialize_sensor_data_db"
run_mqtt_logger = "mqtt_data_logger.__main__:main"
